Use JDK 8 APIs in the worker and tests so they compile at jvm-target 1.8
The -Xjdk-release auto-default (derived from the effective -jvm-target) makes
every compile enforce the target JDK's API surface. The default toolchain
jvm_target is 1.8, but the worker and several tests used Java 11+/16 JDK APIs
that are absent from the JDK 8 API and therefore fail to compile under
-Xjdk-release=1.8.

Replace them with behavior-preserving JDK 8 equivalents:
  - Path.of(x)                   -> Paths.get(x)
  - Files.writeString(p, s)      -> Files.write(p, s.toByteArray())   (UTF-8, same default open options)
  - Files.readString(p[, UTF_8]) -> String(Files.readAllBytes(p), UTF_8)
  - Stream.toList() (Java 16)    -> kotlin.streams.toList()

These are exact for the inputs involved: the readString sites read only known
UTF-8/ASCII files, so readString's throw-on-malformed contract (its sole
theoretical difference from the String/readAllBytes form) is unreachable;
Files.write reuses the same UTF-8 charset and default open options as
writeString; and the single Stream.toList result is consumed immediately. The
Build Tools API itself (kotlin-build-tools-api / -impl and kotlin-compiler-
embeddable 2.4.0) is compiled to Java 8 bytecode, so jvm-target 1.8 is a valid
target for the worker.

Verified: the worker and the builder/tasks + generate test targets compile under
jvm-target 1.8 / -Xjdk-release=1.8, and the affected tests pass.